Ticket #1489: Srolling overflow fix.

--- a/drupal/sites/all/themes/checkdesk/assets/css/style-rtl.css
+++ b/drupal/sites/all/themes/checkdesk/assets/css/style-rtl.css
@@ -6055,6 +6055,7 @@ html body .livefyre-wrapper {
 
 #nav-media-form {
   width: 366px;
+  overflow-y: scroll;
 }
 #nav-media-form iframe {
   width: 100%;
@@ -6384,7 +6385,7 @@ html body .livefyre-wrapper {
   z-index: 2;
 }
 
-@media all and (max-height: 42em) {
+@media all and (max-height: 32em) {
   #nav-media-form {
     max-height: 290px;
     overflow-y: scroll;
