--- a/drupal/sites/all/themes/checkdesk/assets/css/style.css
+++ b/drupal/sites/all/themes/checkdesk/assets/css/style.css
@@ -6057,6 +6057,7 @@ html body .livefyre-wrapper {
 
 #nav-media-form {
   width: 366px;
+  overflow-y: scroll;
 }
 #nav-media-form iframe {
   width: 100%;
@@ -6386,7 +6387,7 @@ html body .livefyre-wrapper {
   z-index: 2;
 }
 
-@media all and (max-height: 42em) {
+@media all and (max-height: 32em) {
   #nav-media-form {
     max-height: 290px;
     overflow-y: scroll;
